fix: Move dark mode variable to the component class

--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -18,6 +18,11 @@
   --accordion-body-padding-y: calc(var(--spacing) * 6);
   --accordion-hover-color: var(--color-default-color);
   --accordion-hover-bg: var(--color-subtle);
+
+  .dark & {
+    --accordion-btn-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23EBF2F5' stroke-linecap='round' stroke-linejoin='round'><path d='m2 5 6 6 6-6'/></svg>");
+    --accordion-btn-active-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23EBF2F5' stroke-linecap='round' stroke-linejoin='round'><path d='m2 5 6 6 6-6'/></svg>");
+  }
 }
 
 @utility accordion-button {
@@ -64,10 +69,4 @@
 }
 @utility accordion-body {
   @apply px-[var(--accordion-body-padding-x)] pb-[var(--accordion-body-padding-y)];
-}
-.dark {
-  .accordion {
-    --accordion-btn-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23EBF2F5' stroke-linecap='round' stroke-linejoin='round'><path d='m2 5 6 6 6-6'/></svg>");
-    --accordion-btn-active-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23EBF2F5' stroke-linecap='round' stroke-linejoin='round'><path d='m2 5 6 6 6-6'/></svg>");
-  }
 }
